@@ -16,6 +16,8 @@ size_t rfs_receive_cmd(const int sock, struct command *cmd);
 size_t rfs_receive_answer(const int sock, struct answer *ans);
 size_t rfs_receive_data(const int sock, void *data, const size_t data_len);
 
+size_t rfs_ignore_incoming_data(const int sock, const size_t data_len);
+
 #ifdef RFS_DEBUG
 void dump_sendrecv_stats();
 #endif
